// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CardListItem CardListItemの初期値(linkあり): dummyCardsLink 1`] = `
"<div>
  <article class=\\"card-list-item\\">
    <figure><img alt=\\"ダミータイトルの画像\\" class=\\"card-img card-img--lg\\">
      <div class=\\"card-list-item__border\\"></div>
      <figcaption>
        <h2 class=\\"card-title\\">ダミータイトル</h2>
        <p class=\\"base-text base-text--card\\">詳細</p>
      </figcaption>
    </figure> <button class=\\"btn\\">
      WebSite
    </button>
  </article>
</div>"
`;

exports[`CardListItem CardListItemの初期値(linkなし): dummyCards 1`] = `
"<div>
  <article class=\\"card-list-item\\">
    <figure><img alt=\\"ダミータイトルの画像\\" class=\\"card-img card-img--sm\\">
      <div class=\\"card-list-item__border\\"></div>
      <figcaption>
        <h2 class=\\"card-title\\">ダミータイトル</h2>
        <p class=\\"base-text base-text--card\\">詳細</p>
      </figcaption>
    </figure>
    <!---->
  </article>
</div>"
`;
